# 000-AIUELAB-Launch-Initiative

./: .cursorignore  .cursorrules  .dockerignore  .editorconfig  .env.discord.example  .env.example  .env.firebase.example  .env.github.example  .env.google.example  .env.mcp.example  .env.n8n  .env.twitter.example  .env.vercel.example  .gitignore  .gitleaks.toml  .mcp.json  .ollama.yml  .pre-commit-config.yaml  .semgrep.yml  AIUELAB_PROJECT_SKETCH.md  AI_TOOLS.md  CLAUDE.md  CONTRIBUTING.md  CURSOR_GUIDE.md  Dockerfile  Dockerfile.claude  FINAL_SUMMARY.md  KEY_MANAGEMENT.md  Makefile  NEW_FEATURES_2025.md  NEW_TOOLS_SUMMARY.md  PLAYWRIGHT_MCP_README.md  PROJECT_IMPROVEMENTS.md  PROJECT_STATUS.md  README.md  REMOTE_MCP_IMPLEMENTATION_SUMMARY.md  REMOTE_MCP_SERVERS.md  SECURITY.md  SECURITY_FEATURES_2025.md  SHARE_TEMPLATE.md  (+26 more)
.cursor/rules/: coding-rules.mdc  core.mdc  refresh.mdc  request.mdc
.cursor/rules/dev-rules/: nextjs.mdc  techstack.mdc
.github/: CODEOWNERS  SECURITY.md  dependabot.yml
.github/workflows/: aiuelab-ios-release.yml  ci-enhanced.yml  ci-precommit.yml  ci.yml  claude-ci.yml  codeql.yml  gitleaks.yml  release.yml  sbom.yml  scorecard.yml  secret-rotation.yml  security-scan.yml  security.yml
.scannerwork/: report-task.txt
Ultra-Think/: README.md  ideas-list.md
Ultra-Think/app-ideas/: 01_鼻歌作曲メーカー.md  02_水平思考ゲーム.md  03_最期の砂時計.md  04_スリメイト.md
Ultra-Think/schedules/: project-timeline.md
automation/: firebase-ios-analytics.json  ios-community-workflow.json  vercel-deploy-workflow.json
automation/ai-news-collector/: README.md  collector.py  config.json  requirements.txt
automation/n8n-workflows/: ai-news-workflow.json  n8n-config.json
docker/: entrypoint.sh
docs/: AUTOMATION_TASKS.md  README_初めに.md  gen_ref_pages.py  index.md  よくある質問.md
docs/features/: ollama.md
docs/quickstart/: configuration.md  first-project.md  installation.md
examples/: ollama_example.py  simple_automation.py
key/:  claude-code-template-mcp.txt
mcp-config/: .env.mcp.example  claude_desktop_config.json  claude_desktop_config_remote.json  remote-servers.json  setup-additional-mcp.sh  setup-mcp.sh
mcp-config/profiles/: full.json  hybrid.json  minimal.json  remote.json  standard.json
public/: presets-manager.html  presets.json  raycast-n8n-config.json
raycast-n8n-extension/: README.md  package.json  tsconfig.json
raycast-n8n-extension/src/: history.tsx  lib.ts  presets.ts  run-preset.tsx  run-webhook.tsx
scripts/: check-terminal.sh  check_no_secrets.py  check_todos.py  claude-ci.sh  claude-headless.sh  discord-ios-automation.py  display-summary.sh  firebase-automation.sh  fix-terminal-encoding.sh  fix-terminal-kerning.sh  github-aiuelab-automation.sh  ios-community-automation.py  load-keys.sh  load_keys.py  mcp-profile-switch.sh  mcp-remote-manager.sh  n8n_auto_trigger.sh  n8n_automation.py  notebooklm-automation.py  notebooklm-raycast.sh  performance_test.py  raycast-n8n-workflow.sh  raycast.sh  run-n8n-workflow.sh  scan-dependencies.sh  security_audit.py  semgrep-scan.sh  setup-ai-tools.sh  setup-n8n.sh  setup-ollama.sh  setup-owasp.sh  setup-remote-mcp.sh  setup-uv.sh  setup.ps1  setup.sh  sync_env_template.py  twitter_automation.py  type-check.sh  update-raycast-baseurl.sh  validate_mcp_config.py  (+1 more)
scripts/raycast/: ai-news-check.sh  open-project.sh  quick-deploy.sh  run-automation.sh
src/: beartype_integration.py  error_recovery.py  github_mcp_integration.py  headless_mode.py  main.py  mcp_examples.py  ollama_integration.py  performance_optimizer.py  playwright_mcp_examples.py  remote_mcp_integration.py  session_manager.py
templates/: automation.js  basic_api.py  ios_view.swift
tests/: test_main.py  test_ollama_integration.py  test_remote_mcp.py
tests/examples/: github_workflows.py
tests/scripts/: session-status.zsh  setup-playwright-mcp.sh  setup.sh
typings/: README.md
