[project]
name = "claude-code-template-mcp"
version = "2.0.0"
description = "2025年最新ベストプラクティス対応のClaude Code MCPテンプレート"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Claude Code Team", email = "claude@anthropic.com" }
]
keywords = ["mcp", "claude", "ai", "development", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core dependencies
    "requests>=2.32.3",
    "pydantic>=2.8.2",
    "click>=8.1.7",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",

    # Async support
    "aiohttp>=3.10.2",
    "aiofiles>=23.2.1",
    "websockets>=12.0",

    # Data processing
    "pandas>=2.2.2",
    "numpy>=1.26.4",

    # JSON/YAML
    "pyyaml>=6.0.1",
    "jsonschema>=4.22.0",

    # Web scraping
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.2",
    "httpx>=0.27.0",

    # Logging
    "loguru>=0.7.2",

    # MCP Integration
    "mcp-use>=1.3.9",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",

    # Runtime type checking (NEW)
    "beartype>=0.18.5",

    # Performance monitoring
    "psutil>=5.9.0",
    "memory-profiler>=0.61.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.7",
    "aioresponses>=0.7.6",

    # Code quality
    "ruff>=0.5.7",
    "mypy>=1.11.1",
    "black>=24.4.2",
    "isort>=5.13.2",
    "pylint>=3.2.6",

    # Type checking (NEW)
    "pyright>=1.1.350",
    "basedpyright>=1.8.0",

    # Security
    "bandit>=1.7.9",
    "pip-audit>=2.7.3",
    "semgrep>=1.45.0",

    # Pre-commit
    "pre-commit>=3.8.0",

    # Development tools
    "ipython>=8.26.0",
    "ipdb>=0.13.13",

    # Code metrics
    "radon>=6.0.1",
    "py-spy>=0.3.14",

    # Type stubs
    "types-requests>=2.32.0.20240712",
    "types-aiofiles>=23.2.0.0",
]

test = [
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.7",
    "aioresponses>=0.7.6",
]

security = [
    "bandit>=1.7.9",
    "pip-audit>=2.7.3",
    "semgrep>=1.45.0",
    "safety>=3.0.0",
]

[project.scripts]
claude-mcp = "src.main:main"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# uv specific configuration
[tool.uv]
managed = true
dev-dependencies = [
    "ipython>=8.26.0",
    "ipdb>=0.13.13",
]

[tool.uv.pip]
index-url = "https://pypi.org/simple"
extra-index-url = []
system = false
compile = true

[tool.black]
line-length = 100
skip-string-normalization = true
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
known_third_party = ["beartype"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "PL",   # pylint
    "RUF",  # ruff-specific
    "S",    # flake8-bandit (security)
]
ignore = ["E501", "PLR0913"]  # line length, too many arguments

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
pretty = true
exclude = [
  "^claude-code-template-mcp/",
]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportGeneralTypeIssues = true
reportPrivateUsage = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
stubPath = "typings"
include = ["src", "tests"]
exclude = ["venv", ".venv", "node_modules", ".git"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "all"
reportAny = false
include = ["src", "tests"]
exclude = ["venv", ".venv", "node_modules", ".git"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # skip assert_used test

[tool.semgrep]
paths = ["src/"]
exclude = ["tests/", "venv/", ".venv/"]
config = [
    "auto",
    "https://semgrep.dev/p/python",
    "https://semgrep.dev/p/security-audit",
    "https://semgrep.dev/p/owasp-top-ten",
]
