[project]
name = "claude-code-template-mcp"
version = "2.0.0"
description = "2025年最新ベストプラクティス対応のClaude Code MCPテンプレート"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Claude Code Team", email = "claude@anthropic.com" }
]
keywords = ["mcp", "claude", "ai", "development", "automation"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    # Core dependencies
    "requests==2.32.3",
    "pydantic==2.8.2",
    "click==8.1.7",
    "rich==13.7.1",
    "python-dotenv==1.0.1",

    # Async support
    "aiohttp==3.10.2",
    "aiofiles==23.2.1",
    "websockets==12.0",

    # JSON/YAML
    "pyyaml==6.0.1",
    "jsonschema==4.22.0",

    # API clients
    "httpx==0.27.0",

    # Logging
    "loguru==0.7.2",

    # MCP Integration
    "mcp-use==1.3.9",
    "langchain-openai==0.3.0",
    "langchain-anthropic==0.3.0",

    # Performance monitoring
    "psutil==5.9.0",
]

[project.optional-dependencies]
ollama = [
    # Ollama Integration (ローカルLLM)
    "ollama==0.1.7",
    "langchain-ollama==0.1.0",
    "llama-index-llms-ollama==0.1.0",
]

dev = [
    # Testing
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest-asyncio==0.23.7",
    "aioresponses==0.7.6",

    # Code quality (Ruff統一)
    "ruff==0.5.7",
    "mypy==1.11.1",

    # Type checking
    "pyright==1.1.350",

    # Security
    "bandit==1.7.9",
    "pip-audit==2.7.3",
    "semgrep==1.45.0",

    # Pre-commit
    "pre-commit==3.8.0",

    # Code metrics
    "radon==6.0.1",

    # Type stubs
    "types-requests==2.32.0.20240712",
    "types-aiofiles==23.2.0.0",
]

test = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest-asyncio==0.23.7",
    "aioresponses==0.7.6",
]

security = [
    "bandit==1.7.9",
    "pip-audit==2.7.3",
    "semgrep==1.45.0",
    "safety==3.0.0",
]

docs = [
    # Documentation
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.0",
    "mkdocstrings[python]==0.24.0",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-section-index==0.3.8",
]

all = [
    # Includes all optional dependencies
    # Ollama packages
    "ollama==0.1.7",
    "langchain-ollama==0.1.0",
    "llama-index-llms-ollama==0.1.0",
    # Testing
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest-asyncio==0.23.7",
    "aioresponses==0.7.6",
    "ruff==0.5.7",
    "mypy==1.11.1",
    "pyright==1.1.350",
    "bandit==1.7.9",
    "pip-audit==2.7.3",
    "semgrep==1.45.0",
    "safety==3.0.0",
    "pre-commit==3.8.0",
    "radon==6.0.1",
    "types-requests==2.32.0.20240712",
    "types-aiofiles==23.2.0.0",
    "mkdocs==1.5.3",
    "mkdocs-material==9.5.0",
    "mkdocstrings[python]==0.24.0",
    "mkdocs-gen-files==0.5.0",
    "mkdocs-literate-nav==0.6.1",
    "mkdocs-section-index==0.3.8",
]

[project.scripts]
claude-mcp = "src.main:main"

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

# uv specific configuration
[tool.uv]
managed = true
dev-dependencies = [
    "ipython>=8.26.0",
    "ipdb>=0.13.13",
]

[tool.uv.pip]
index-url = "https://pypi.org/simple"
extra-index-url = []
system = false
compile = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "PL",   # pylint
    "RUF",  # ruff-specific
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
    "C90",  # mccabe complexity
    "ANN",  # flake8-annotations
    "ASYNC", # flake8-async
    "ARG",  # flake8-unused-arguments
    "PTH",  # flake8-use-pathlib
    "PD",   # pandas-vet
    "NPY",  # NumPy-specific rules
]
ignore = ["E501", "PLR0913", "ANN101", "ANN102"]  # line length, too many arguments, self/cls annotations

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ANN"]  # allow assert and skip annotations in tests
"docs/*" = ["ALL"]  # skip all checks for docs
"src/headless_mode.py" = ["ANN", "C901", "PLR0912"]
"src/performance_optimizer.py" = ["ANN", "F821", "RUF006"]
"src/error_recovery.py" = ["ANN", "RUF002", "PTH123", "S311", "PLR2004"]
"src/remote_mcp_integration.py" = ["ANN", "PLR2004", "PTH110", "PTH123", "PLW2901"]
"src/playwright_mcp_examples.py" = ["ANN", "RUF001"]
"src/beartype_integration.py" = ["ANN", "E402", "UP007", "PLR2004", "ARG001", "RUF003"]
"src/ollama_integration.py" = ["ANN"]
"src/session_manager.py" = ["PLW0603"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
pretty = true
exclude = [
  "^claude-code-template-mcp/",
]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
  "src.headless_mode",
  "src.performance_optimizer",
  "src.error_recovery",
  "src.remote_mcp_integration",
  "src.playwright_mcp_examples",
  "src.beartype_integration",
  "src.mcp_examples",
  "src.ollama_integration",
]
ignore_errors = true

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = false
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
reportGeneralTypeIssues = true
reportPrivateUsage = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
stubPath = "typings"
include = ["src", "tests"]
exclude = ["venv", ".venv", "node_modules", ".git"]

[tool.basedpyright]
pythonVersion = "3.11"
typeCheckingMode = "all"
reportAny = false
include = ["src", "tests"]
exclude = ["venv", ".venv", "node_modules", ".git"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers --tb=short"
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"]  # skip assert_used test

[tool.semgrep]
paths = ["src/"]
exclude = ["tests/", "venv/", ".venv/"]
config = [
    "auto",
    "https://semgrep.dev/p/python",
    "https://semgrep.dev/p/security-audit",
    "https://semgrep.dev/p/owasp-top-ten",
]
